# Unsupervised-Learning

./: pyproject.toml  requirements.txt
notebooks/: 01_clustering.ipynb  01_clustering_solution.ipynb  02_dimensionality_reduction.ipynb  02_dimensionality_reduction_solution.ipynb
notebooks/extra/: Numpy_and_matplotlib.ipynb  auxiliary.ipynb
notebooks/extra/data/: uk_foods.csv
