[tool.poetry]
name = "unsupervised-learning"
version = "0.1.0"
description = ""
authors = ["Kameneses <carlosm@deducedatasolutions.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
